# lapelotaal10

./: .gitignore  README.md
docs/: arquitectura-codigo.md  auto-eq-hifi.md  control-resonancias-soothe2.md  eq-dinamico-bloom.md  framework-desarrollo.md  loudness-matching.md  multibanda-automatico.md  rendimiento-latencia.md  saturacion-multibanda.md
plugin/: CMakeLists.txt
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/DSP/: BandSplitter.h  Saturator.h
